started data cleaning for indexing test

--- a/notebooks/statistics.ipynb
+++ b/notebooks/statistics.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 1,
    "id": "initial_id",
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2023-10-29T14:14:23.823591Z",
-     "start_time": "2023-10-29T14:14:23.819040Z"
+     "end_time": "2023-10-29T21:19:48.609793Z",
+     "start_time": "2023-10-29T21:19:46.971774Z"
     }
    },
    "outputs": [],
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "outputs": [],
    "source": [
     "# MongoDB connection setup\n",
@@ -34,8 +34,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-10-29T13:07:23.652072Z",
-     "start_time": "2023-10-29T13:07:23.645089Z"
+     "end_time": "2023-10-29T21:19:48.620001Z",
+     "start_time": "2023-10-29T21:19:48.610652Z"
     }
    },
    "id": "3936b76e936ce986"
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 3,
    "outputs": [],
    "source": [
     "semantic_versioning_regex = r'^(?P<major>0|[1-9]\\d*)\\.(?P<minor>0|[1-9]\\d*)\\.(?P<patch>0|[1-9]\\d*)(?:-(?P<prerelease>(?:0|[1-9]\\d*|\\d*[a-zA-Z-][0-9a-zA-Z-]*)(?:\\.(?:0|[1-9]\\d*|\\d*[a-zA-Z-][0-9a-zA-Z-]*))*))?(?:\\+(?P<buildmetadata>[0-9a-zA-Z-]+(?:\\.[0-9a-zA-Z-]+)*))?$'"
@@ -64,22 +64,22 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-10-29T13:46:30.019704Z",
-     "start_time": "2023-10-29T13:46:30.014212Z"
+     "end_time": "2023-10-29T21:19:48.624118Z",
+     "start_time": "2023-10-29T21:19:48.620664Z"
     }
    },
    "id": "1500cc4656bc7851"
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 4,
    "outputs": [
     {
      "data": {
-      "text/plain": "                                       _id  count  \\\n0                                 20191114      1   \n1                              v1-6-1-oas3      1   \n2     f800c40a-3a45-40f2-8fa8-27590545bb27      1   \n3                                     2020      8   \n4            84838484838_73737372.72373827      1   \n...                                    ...    ...   \n8326                               v1beta4      1   \n8327                               2020.46      1   \n8328                                2.10.3      4   \n8329                                18.0.0     12   \n8330                                 2.021      1   \n\n                                   cleaned  major  minor  patch prerelease  \\\n0                                 20191114    NaN    NaN    NaN       None   \n1                               1-6-1-oas3    NaN    NaN    NaN       None   \n2     f800c40a-3a45-40f2-8fa8-27590545bb27    NaN    NaN    NaN       None   \n3                                     2020    NaN    NaN    NaN       None   \n4            84838484838_73737372.72373827    NaN    NaN    NaN       None   \n...                                    ...    ...    ...    ...        ...   \n8326                                1beta4    NaN    NaN    NaN       None   \n8327                               2020.46    NaN    NaN    NaN       None   \n8328                                2.10.3    2.0   10.0    3.0       None   \n8329                                18.0.0   18.0    0.0    0.0       None   \n8330                                 2.021    NaN    NaN    NaN       None   \n\n     buildmetadata  \n0             None  \n1             None  \n2             None  \n3             None  \n4             None  \n...            ...  \n8326          None  \n8327          None  \n8328          None  \n8329          None  \n8330          None  \n\n[8331 rows x 8 columns]",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>_id</th>\n      <th>count</th>\n      <th>cleaned</th>\n      <th>major</th>\n      <th>minor</th>\n      <th>patch</th>\n      <th>prerelease</th>\n      <th>buildmetadata</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>20191114</td>\n      <td>1</td>\n      <td>20191114</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>None</td>\n      <td>None</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>v1-6-1-oas3</td>\n      <td>1</td>\n      <td>1-6-1-oas3</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>None</td>\n      <td>None</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>f800c40a-3a45-40f2-8fa8-27590545bb27</td>\n      <td>1</td>\n      <td>f800c40a-3a45-40f2-8fa8-27590545bb27</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>None</td>\n      <td>None</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>2020</td>\n      <td>8</td>\n      <td>2020</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>None</td>\n      <td>None</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>84838484838_73737372.72373827</td>\n      <td>1</td>\n      <td>84838484838_73737372.72373827</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>None</td>\n      <td>None</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>8326</th>\n      <td>v1beta4</td>\n      <td>1</td>\n      <td>1beta4</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>None</td>\n      <td>None</td>\n    </tr>\n    <tr>\n      <th>8327</th>\n      <td>2020.46</td>\n      <td>1</td>\n      <td>2020.46</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>None</td>\n      <td>None</td>\n    </tr>\n    <tr>\n      <th>8328</th>\n      <td>2.10.3</td>\n      <td>4</td>\n      <td>2.10.3</td>\n      <td>2.0</td>\n      <td>10.0</td>\n      <td>3.0</td>\n      <td>None</td>\n      <td>None</td>\n    </tr>\n    <tr>\n      <th>8329</th>\n      <td>18.0.0</td>\n      <td>12</td>\n      <td>18.0.0</td>\n      <td>18.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>None</td>\n      <td>None</td>\n    </tr>\n    <tr>\n      <th>8330</th>\n      <td>2.021</td>\n      <td>1</td>\n      <td>2.021</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>None</td>\n      <td>None</td>\n    </tr>\n  </tbody>\n</table>\n<p>8331 rows × 8 columns</p>\n</div>"
+      "text/plain": "                                                    _id  count  \\\n0                     1.33.0-12-06-2021225903-04825bf64      1   \n1                                            2019.08.29      1   \n2     123movies-watch-f-9-fast-and-furious-9-2021-on...      1   \n3                                                dew-01      1   \n4                                                   TBD      1   \n...                                                 ...    ...   \n8326                                         2019.02.13      1   \n8327                                              4.8.0      7   \n8328                                             3.3.42      1   \n8329                                               2.18      1   \n8330                                           11.5.739      1   \n\n                                                cleaned  major  minor  patch  \\\n0                     1.33.0-12-06-2021225903-04825bf64    1.0   33.0    0.0   \n1                                            2019.08.29    NaN    NaN    NaN   \n2     123movies-watch-f-9-fast-and-furious-9-2021-on...    NaN    NaN    NaN   \n3                                                dew-01    NaN    NaN    NaN   \n4                                                   TBD    NaN    NaN    NaN   \n...                                                 ...    ...    ...    ...   \n8326                                         2019.02.13    NaN    NaN    NaN   \n8327                                              4.8.0    4.0    8.0    0.0   \n8328                                             3.3.42    3.0    3.0   42.0   \n8329                                               2.18    NaN    NaN    NaN   \n8330                                           11.5.739   11.0    5.0  739.0   \n\n                      prerelease buildmetadata  \n0     12-06-2021225903-04825bf64          None  \n1                           None          None  \n2                           None          None  \n3                           None          None  \n4                           None          None  \n...                          ...           ...  \n8326                        None          None  \n8327                        None          None  \n8328                        None          None  \n8329                        None          None  \n8330                        None          None  \n\n[8331 rows x 8 columns]",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>_id</th>\n      <th>count</th>\n      <th>cleaned</th>\n      <th>major</th>\n      <th>minor</th>\n      <th>patch</th>\n      <th>prerelease</th>\n      <th>buildmetadata</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>1.33.0-12-06-2021225903-04825bf64</td>\n      <td>1</td>\n      <td>1.33.0-12-06-2021225903-04825bf64</td>\n      <td>1.0</td>\n      <td>33.0</td>\n      <td>0.0</td>\n      <td>12-06-2021225903-04825bf64</td>\n      <td>None</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>2019.08.29</td>\n      <td>1</td>\n      <td>2019.08.29</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>None</td>\n      <td>None</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>123movies-watch-f-9-fast-and-furious-9-2021-on...</td>\n      <td>1</td>\n      <td>123movies-watch-f-9-fast-and-furious-9-2021-on...</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>None</td>\n      <td>None</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>dew-01</td>\n      <td>1</td>\n      <td>dew-01</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>None</td>\n      <td>None</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>TBD</td>\n      <td>1</td>\n      <td>TBD</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>None</td>\n      <td>None</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>8326</th>\n      <td>2019.02.13</td>\n      <td>1</td>\n      <td>2019.02.13</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>None</td>\n      <td>None</td>\n    </tr>\n    <tr>\n      <th>8327</th>\n      <td>4.8.0</td>\n      <td>7</td>\n      <td>4.8.0</td>\n      <td>4.0</td>\n      <td>8.0</td>\n      <td>0.0</td>\n      <td>None</td>\n      <td>None</td>\n    </tr>\n    <tr>\n      <th>8328</th>\n      <td>3.3.42</td>\n      <td>1</td>\n      <td>3.3.42</td>\n      <td>3.0</td>\n      <td>3.0</td>\n      <td>42.0</td>\n      <td>None</td>\n      <td>None</td>\n    </tr>\n    <tr>\n      <th>8329</th>\n      <td>2.18</td>\n      <td>1</td>\n      <td>2.18</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>None</td>\n      <td>None</td>\n    </tr>\n    <tr>\n      <th>8330</th>\n      <td>11.5.739</td>\n      <td>1</td>\n      <td>11.5.739</td>\n      <td>11.0</td>\n      <td>5.0</td>\n      <td>739.0</td>\n      <td>None</td>\n      <td>None</td>\n    </tr>\n  </tbody>\n</table>\n<p>8331 rows × 8 columns</p>\n</div>"
      },
-     "execution_count": 54,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -99,8 +99,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-10-29T13:51:15.544859Z",
-     "start_time": "2023-10-29T13:50:58.636453Z"
+     "end_time": "2023-10-29T21:20:30.678734Z",
+     "start_time": "2023-10-29T21:19:48.624828Z"
     }
    },
    "id": "db69bea860d88b1f"
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 6,
    "outputs": [
     {
      "name": "stdout",
@@ -137,9 +137,9 @@
       "\tW.r.t. versioned: 75.4%\n",
       "\tW.r.t. total: 62.2%\n",
       "\t---\n",
-      "\tDifferent major versions: 71\n",
-      "\tDifferent minor versions: 163\n",
-      "\tDifferent patch versions: 280\n",
+      "\tUnique major versions: 71\n",
+      "\tUnique minor versions: 163\n",
+      "\tUnique patch versions: 280\n",
       "\t---\n",
       "\tHas pre-release tag: 4999 [1.15%]\n",
       "\tHas build metadata: 3 [0.0006%]\n"
@@ -153,9 +153,9 @@
     "print(f'\\tW.r.t. versioned: {str(versioned_correctly * 100 / version)[:4]}%')\n",
     "print(f'\\tW.r.t. total: {str(versioned_correctly / total_length * 100)[:4]}%')\n",
     "print(f'\\t---')\n",
-    "print(f'\\tDifferent major versions: {versions.groupby(by=\"major\").size().count()}')\n",
-    "print(f'\\tDifferent minor versions: {versions.groupby(by=\"minor\").size().count()}')\n",
-    "print(f'\\tDifferent patch versions: {versions.groupby(by=\"patch\").size().count()}')\n",
+    "print(f'\\tUnique major versions: {versions.groupby(by=\"major\").size().count()}')\n",
+    "print(f'\\tUnique minor versions: {versions.groupby(by=\"minor\").size().count()}')\n",
+    "print(f'\\tUnique patch versions: {versions.groupby(by=\"patch\").size().count()}')\n",
     "print(f'\\t---')\n",
     "print(f'\\tHas pre-release tag: {has_prerelease} [{str(has_prerelease / total_length * 100)[:4]}%]')\n",
     "print(f'\\tHas build metadata: {has_buildmetadata} [{str(has_buildmetadata / total_length * 100)[:6]}%]')"
@@ -163,15 +163,15 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-10-29T14:33:42.518929Z",
-     "start_time": "2023-10-29T14:33:42.501959Z"
+     "end_time": "2023-10-29T21:20:30.744451Z",
+     "start_time": "2023-10-29T21:20:30.704179Z"
     }
    },
    "id": "c4f5665942f8172e"
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 7,
    "outputs": [
     {
      "data": {
@@ -195,15 +195,15 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-10-29T14:27:50.538261Z",
-     "start_time": "2023-10-29T14:27:50.348972Z"
+     "end_time": "2023-10-29T21:20:30.990441Z",
+     "start_time": "2023-10-29T21:20:30.709417Z"
     }
    },
    "id": "ac6fc64a413470b2"
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 8,
    "outputs": [
     {
      "data": {
@@ -227,15 +227,15 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-10-29T14:27:32.208700Z",
-     "start_time": "2023-10-29T14:27:31.824257Z"
+     "end_time": "2023-10-29T21:20:31.456897Z",
+     "start_time": "2023-10-29T21:20:30.990570Z"
     }
    },
    "id": "957b48eb35d9065a"
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 9,
    "outputs": [
     {
      "data": {
@@ -259,8 +259,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-10-29T14:27:33.074446Z",
-     "start_time": "2023-10-29T14:27:32.464928Z"
+     "end_time": "2023-10-29T21:20:32.170185Z",
+     "start_time": "2023-10-29T21:20:31.458570Z"
     }
    },
    "id": "58a6b5747a93a8f3"
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "outputs": [],
    "source": [
     "schemes = pd.DataFrame(list(swagger.find({}, { 'name': 1, '_API_spec.schemes': 1 })))\n",
@@ -293,15 +293,15 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-10-26T19:01:51.575886Z",
-     "start_time": "2023-10-26T19:01:24.497019Z"
+     "end_time": "2023-10-29T21:20:55.607364Z",
+     "start_time": "2023-10-29T21:20:32.170577Z"
     }
    },
    "id": "dcbec6f206142b53"
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 11,
    "outputs": [],
    "source": [
     "has_both = schemes[(schemes['http'] == True) & (schemes['https'] == True)]['_id'].count()\n",
@@ -313,23 +313,23 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-10-26T19:23:18.991772Z",
-     "start_time": "2023-10-26T19:23:18.954480Z"
+     "end_time": "2023-10-29T21:20:55.646334Z",
+     "start_time": "2023-10-29T21:20:55.602597Z"
     }
    },
    "id": "524fd99a3bca5321"
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 12,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Only `http` schema: 41730 [9.6%]\n",
-      "Both `http` and `https` schemes: 4367 [1.0%]\n",
-      "No schema: 386168 [89.3%]\n"
+      "Only `http` schema: 12136 [2.8%]\n",
+      "Both `http` and `https` schemes: 142904 [33.%]\n",
+      "No schema: 277225 [64.1%]\n"
      ]
     }
    ],
@@ -341,15 +341,15 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-10-26T19:31:37.004095Z",
-     "start_time": "2023-10-26T19:31:36.998179Z"
+     "end_time": "2023-10-29T21:20:55.651216Z",
+     "start_time": "2023-10-29T21:20:55.646514Z"
     }
    },
    "id": "c707f977406f0a03"
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 13,
    "outputs": [],
    "source": [
     "# swagger.find({}, {'test': { '$size': { '$objectToArray': '$_API_spec.paths' } }})"
@@ -357,8 +357,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-10-29T13:48:26.561815Z",
-     "start_time": "2023-10-29T13:48:26.554896Z"
+     "end_time": "2023-10-29T21:20:55.651824Z",
+     "start_time": "2023-10-29T21:20:55.649384Z"
     }
    },
    "id": "ee84597707011069"
