added elastic notebook + word2vec trained model (gensim)

--- a/proposal/bibliography/references.bib
+++ b/proposal/bibliography/references.bib
@@ -4,6 +4,13 @@
 	Publisher = {Springer-Verlag},
 	Title = {Object-Oriented Metrics in Practice},
 	Year = {2006}}
+
+@article{cer2018universal,
+  title={Universal sentence encoder},
+  author={Cer, Daniel and Yang, Yinfei and Kong, Sheng-yi and Hua, Nan and Limtiaco, Nicole and John, Rhomni St and Constant, Noah and Guajardo-Cespedes, Mario and Yuan, Steve and Tar, Chris and others},
+  journal={arXiv preprint arXiv:1803.11175},
+  year={2018}
+}
 	
 @article{2018:ieeesw:webc,
 	author = {Cesare Pautasso and Olaf Zimmermann},
@@ -43,7 +50,6 @@ year=2019
 	month        = {10}
 }
 
-
 @inproceedings{inproceedings,
 	title        = {Software evolution visualization techniques and methods - a systematic review},
 	author       = {Bani-Salameh, Hani and Ahmad, Ayat and Aljammal, Ashraf},
@@ -53,7 +59,6 @@ year=2019
 	doi          = {10.1109/CSIT.2016.7549475}
 }
 
-
 @online{suhas,
 	title        = { Visualising complex APIs using API Map},
 	author       = {Suhas Chatekar},
@@ -61,6 +66,7 @@ year=2019
 	url          = {https://hackernoon.com/visualising-complex-apis-using-api-map-f09f617acb32#.8y525mrpn},
 	urldate      = {2020-10-25}
 }
+
 @inproceedings{10.1007/978-3-662-45391-9_17,
 	title        = {How Do Developers React to RESTful API Evolution?},
 	author       = {Wang, Shaohua and Keivanloo, Iman and Zou, Ying},
@@ -70,12 +76,14 @@ year=2019
 	pages        = {245--259},
 	isbn         = {978-3-662-45391-9}
 }
+
 @book{Arnaud,
 	title        = {The Design of Web API},
 	author       = {Arnaud Lauret},
 	year         = 2019,
 	publisher    = {Manning Publications Co}
 }
+
 @article{ReactOrNot,
 	title        = {To react, or not to react: Patterns of reaction to API deprecation},
 	author       = {Sawant, Anand Ashok and Robbes, Romain and Bacchelli, Alberto},
@@ -86,11 +94,13 @@ year=2019
 	pages        = {3824--3870},
 	isbn         = {1573-7616}
 }
+
 @online{swagger,
 	title        = {OpenAPI Specification},
 	author       = {Swagger},
 	url          = {https://swagger.io/specification/}
 }
+
 @inproceedings{1021334,
 	title        = {An integrated approach for studying architectural evolution},
 	author       = {{Qiang Tu} and M. W. {Godfrey}},
@@ -101,6 +111,7 @@ year=2019
 	pages        = {127--136},
 	doi          = {10.1109/WPC.2002.1021334}
 }
+
 @inbook{De2017,
 	title        = {API Documentation},
 	author       = {De, Brajesh},
@@ -113,6 +124,7 @@ year=2019
 	isbn         = {978-1-4842-1305-6},
 	url          = {https://doi.org/10.1007/978-1-4842-1305-6_4}
 }
+
 @inproceedings{7930199,
 	title        = {A Framework for the Structural Analysis of REST APIs},
 	author       = {F. {Haupt} and F. {Leymann} and A. {Scherer} and K. {Vukojevic-Haupt}},
@@ -123,6 +135,7 @@ year=2019
 	pages        = {55--58},
 	doi          = {10.1109/ICSA.2017.40}
 }
+
 @inproceedings{6405266,
 	title        = {Detecting semantic changes in Makefile build code},
 	author       = {J. M. {Al-Kofahi} and H. V. {Nguyen} and A. T. {Nguyen} and T. T. {Nguyen} and T. N. {Nguyen}},
@@ -133,6 +146,7 @@ year=2019
 	pages        = {150--159},
 	doi          = {10.1109/ICSM.2012.6405266}
 }
+
 @inproceedings{6295797,
 	title        = {Visualizing the Evolution of Software Systems Using the Forest Metaphor},
 	author       = {U. {Erra} and G. {Scanniello} and N. {Capece}},
@@ -143,6 +157,7 @@ year=2019
 	pages        = {87--92},
 	doi          = {10.1109/IV.2012.25}
 }
+
 @inproceedings{erra2012towards,
 	title        = {Towards the visualization of software systems as 3D forests: the CodeTrees environment},
 	author       = {Erra, Ugo and Scanniello, Giuseppe},
@@ -150,6 +165,7 @@ year=2019
 	booktitle    = {Proceedings of the 27th Annual ACM Symposium on Applied Computing},
 	pages        = {981--988}
 }
+
 @inproceedings{1631103,
 	title        = {Classifying Change Types for Qualifying Change Couplings},
 	author       = {B. {Fluri} and H. C. {Gall}},
@@ -160,6 +176,7 @@ year=2019
 	pages        = {35--45},
 	doi          = {10.1109/ICPC.2006.16}
 }
+
 @inproceedings{1509306,
 	title        = {Measuring fine-grained change in software: towards modification-aware change metrics},
 	author       = {D. M. {German} and A. {Hindle}},
@@ -170,6 +187,7 @@ year=2019
 	pages        = {10 pp.-28},
 	doi          = {10.1109/METRICS.2005.32}
 }
+
 @article{article,
 	title        = {The Evolution Matrix: Recovering Software Evolution using Software Visualization Techniques},
 	author       = {Lanza, Michele},
@@ -179,6 +197,7 @@ year=2019
 	pages        = {},
 	doi          = {10.1145/602461.602467}
 }
+
 @inproceedings{bani,
 	title        = {Software evolution visualization techniques and methods - a systematic review},
 	author       = {Bani-Salameh, Hani and Ahmad, Ayat and Aljammal, Ashraf},
@@ -187,6 +206,7 @@ year=2019
 	pages        = {1--6},
 	doi          = {10.1109/CSIT.2016.7549475}
 }
+
 @inproceedings{mcNair,
 	title        = {Visualizing Software Architecture Evolution Using Change-Sets},
 	author       = {A. {McNair} and D. M. {German} and J. {Weber-Jahnke}},
@@ -197,6 +217,7 @@ year=2019
 	pages        = {130--139},
 	doi          = {10.1109/WCRE.2007.52}
 }
+
 @inproceedings{Wettel,
 	title        = {Visual Exploration of Large-Scale Evolving Software},
 	author       = {Wettel, Richard},
@@ -206,6 +227,7 @@ year=2019
 	pages        = {391--394},
 	doi          = {10.1109/ICSE-COMPANION.2009.5071029}
 }
+
 @inproceedings{ShiLin,
 	title        = {An Empirical Study on Evolution of API Documentation},
 	author       = {Shi, Lin and Zhong, Hao and Xie, Tao and Li, Mingshu},
@@ -215,6 +237,7 @@ year=2019
 	doi          = {10.1007/978-3-642-19811-3_29},
 	isbn         = {978-3-642-19810-6}
 }
+
 @inproceedings{Sohan,
 	title        = {A Case Study of Web API Evolution},
 	author       = {Sohan, S.M. and Anslow, Craig and Maurer, Frank},
@@ -223,6 +246,7 @@ year=2019
 	pages        = {245--252},
 	doi          = {10.1109/SERVICES.2015.43}
 }
+
 @inproceedings{Koci,
 	title        = {Classification of Changes in API Evolution},
 	author       = {R. {Koçi} and X. {Franch} and P. {Jovanovic} and A. {Abelló}},
@@ -233,6 +257,7 @@ year=2019
 	pages        = {243--249},
 	doi          = {10.1109/EDOC.2019.00037}
 }
+
 @article{Dig,
 	title        = {How do APIs evolve? A story of refactoring},
 	author       = {Dig, Danny and Johnson, Ralph},
@@ -243,6 +268,7 @@ year=2019
 	pages        = {83--107},
 	doi          = {10.1002/smr.328}
 }
+
 @inproceedings{Xavier,
 	title        = {Why do we break APIs? First answers from developers},
 	author       = {L. {Xavier} and A. {Hora} and M. T. {Valente}},
@@ -253,6 +279,7 @@ year=2019
 	pages        = {392--396},
 	doi          = {10.1109/SANER.2017.7884640}
 }
+
 @inproceedings{Espinha,
 	title        = {Web API growing pains: Stories from client developers and their code},
 	author       = {T. {Espinha} and A. {Zaidman} and H. {Gross}},
@@ -263,6 +290,7 @@ year=2019
 	pages        = {84--93},
 	doi          = {10.1109/CSMR-WCRE.2014.6747228}
 }
+
 @inproceedings{Li,
 	title        = {How Does Web Service API Evolution Affect Clients?},
 	author       = {J. {Li} and Y. {Xiong} and X. {Liu} and L. {Zhang}},
@@ -273,6 +301,7 @@ year=2019
 	pages        = {300--307},
 	doi          = {10.1109/ICWS.2013.48}
 }
+
 @inproceedings{Brito,
 	title        = {Historical and impact analysis of API breaking changes: A large-scale study},
 	author       = {L. {Xavier} and A. {Brito} and A. {Hora} and M. T. {Valente}},
@@ -283,6 +312,7 @@ year=2019
 	pages        = {138--147},
 	doi          = {10.1109/SANER.2017.7884616}
 }
+
 @inproceedings{Haupt,
 	title        = {A Framework for the Structural Analysis of REST APIs},
 	author       = {F. {Haupt} and F. {Leymann} and A. {Scherer} and K. {Vukojevic-Haupt}},
