--- a/notebooks/indexing.ipynb
+++ b/notebooks/indexing.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 1,
    "id": "initial_id",
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2023-11-07T23:42:48.905693Z",
-     "start_time": "2023-11-07T23:42:48.896913Z"
+     "end_time": "2023-11-09T08:05:45.950663Z",
+     "start_time": "2023-11-09T08:05:45.209170Z"
     }
    },
    "outputs": [],
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 2,
    "outputs": [],
    "source": [
     "def train_doc2vec(corpus, retrain=False):\n",
@@ -47,15 +47,15 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-07T23:56:25.324426Z",
-     "start_time": "2023-11-07T23:56:25.319193Z"
+     "end_time": "2023-11-09T08:05:45.953814Z",
+     "start_time": "2023-11-09T08:05:45.951299Z"
     }
    },
    "id": "4e506aa184fc4dda"
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 3,
    "outputs": [],
    "source": [
     "def get_top_n_docs(model, names, versions, query, n=5):\n",
@@ -74,8 +74,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-07T23:30:43.332245Z",
-     "start_time": "2023-11-07T23:30:43.327442Z"
+     "end_time": "2023-11-09T08:05:45.956764Z",
+     "start_time": "2023-11-09T08:05:45.954660Z"
     }
    },
    "id": "44c89702e566c55b"
@@ -103,8 +103,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-07T23:01:51.264788Z",
-     "start_time": "2023-11-07T23:01:51.261506Z"
+     "end_time": "2023-11-09T08:05:45.959790Z",
+     "start_time": "2023-11-09T08:05:45.957616Z"
     }
    },
    "id": "8b2278d33a87334f"
@@ -119,13 +119,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 5,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 3996/3996 [02:27<00:00, 27.17it/s]\n"
+      "100%|██████████| 3996/3996 [02:29<00:00, 26.80it/s]\n"
      ]
     }
    ],
@@ -146,7 +146,7 @@
     "            contents = json.load(file)\n",
     "            \n",
     "            specs_names.append(contents['info']['title'])\n",
-    "            specs_versions.append(contents['info']['version'])\n",
+    "            specs_versions.append(contents['info']['version'] if not contents['info']['version'].startswith('v') else contents['info']['version'][1:])\n",
     "            specs.append(clean(' '.join(re.findall(nl_tags, str(contents)))))\n",
     "        except json.JSONDecodeError:\n",
     "            continue"
@@ -154,39 +154,44 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-07T23:26:02.745568Z",
-     "start_time": "2023-11-07T23:23:34.373168Z"
+     "end_time": "2023-11-09T08:08:16.326950Z",
+     "start_time": "2023-11-09T08:05:45.961922Z"
     }
    },
    "id": "e21e53e2b6b44ad3"
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "outputs": [],
    "source": [
-    "doc2vec_model = train_doc2vec(specs, retrain=True)"
+    "doc2vec_model = train_doc2vec(specs)\n",
+    "# doc2vec_model = train_doc2vec(specs)"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-11-09T08:11:10.975793Z",
+     "start_time": "2023-11-09T08:11:10.898382Z"
+    }
    },
    "id": "e6b41ee5f06ef0a9"
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 10,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "These are the top 5 results of the query \"network manager\":\n",
+      "These are the top 5 results of the query \"news\":\n",
       "\n",
-      "\t1. NetworkManagementClient   v.2017-11-01   [69%]\n",
-      "\t2. NetworkManagementClient   v.2017-09-01   [69%]\n",
-      "\t3. Transform                 v.1.0.0        [68%]\n",
-      "\t4. NetworkManagementClient   v.2018-01-01   [67%]\n",
-      "\t5. NetworkManagementClient   v.2017-10-01   [67%]\n"
+      "\t1. MLB v3 RotoBaller Articles       v.1.0   [58%]\n",
+      "\t2. MLB v3 RotoBaller Premium News   v.1.0   [55%]\n",
+      "\t3. NBA v3 RotoBaller Articles       v.1.0   [53%]\n",
+      "\t4. BizToc                           v.1     [51%]\n",
+      "\t5. NFL v3 RotoBaller Articles       v.1.0   [50%]\n"
      ]
     }
    ],
@@ -195,27 +200,19 @@
     "# client to manage network / network manager\n",
     "# football match predictor\n",
     "# policy administration\n",
+    "# checking email mailboxes / email checker\n",
+    "# news\n",
     "\n",
-    "get_top_n_docs(doc2vec_model, specs_names, specs_versions, \"network manager\", n=5);"
+    "get_top_n_docs(doc2vec_model, specs_names, specs_versions, \"news\", n=5);"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-07T23:56:59.331360Z",
-     "start_time": "2023-11-07T23:56:59.235771Z"
+     "end_time": "2023-11-09T08:23:19.875768Z",
+     "start_time": "2023-11-09T08:23:19.827705Z"
     }
    },
    "id": "30fb53786c9378fe"
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "b51d7de9e98b3ef2"
   }
  ],
  "metadata": {
