written first part of the introduction

--- a/proposal/main.tex
+++ b/proposal/main.tex
@@ -53,20 +53,11 @@
 
 \abstract{
 
-    The primary objective of this thesis is to create an information retrieval system enabling users to explore a compre
-    hensive collection of OpenAPI specifications. The system will use historical versioned data - scraped from existing
-    github repositories - as well as user-uploaded data. \\
+    The primary objective of this thesis is to create an information retrieval system enabling users to explore a compre hensive collection of OpenAPI specifications. The system will use historical versioned data - scraped from existing github repositories - as well as user-uploaded data. \\
 
-    This platform serves a dual purpose, catering to both academics and developers. In the case of academics, this platf
-    orm can serve as a repository from which to conduct research, facilitating more in-depth studies on API specificatio
-    ns and their evolution. On the other hand, developers can look up several different examples that could help them ge
-    t started with their own OpenAPI documentation. \\
+    This platform serves a dual purpose, catering to both academics and developers. In the case of academics, this platf orm can serve as a repository from which to conduct research, facilitating more in-depth studies on API specificatio ns and their evolution. On the other hand, developers can look up several different examples that could help them get started with their own OpenAPI documentation. \\
 
-    The main contributions of this thesis include two crucial aspects: data engineering and software engineering. In the
-    first case, the thesis will delve in the process of refining raw data and finding ways to classify the API specifica
-    tions. In the second case, the thesis will define the architectural design and the development of the service itself
-    .
-
+    The main contributions of this thesis include two crucial aspects: data engineering and software engineering. In the first case, the thesis will delve in the process of refining raw data and finding ways to classify the API specifications. In the second case, the thesis will define the architectural design and the development of the service itself.
 }
 
 \begin{document}
@@ -86,9 +77,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
     \section{Introduction}\label{sec:introduction}
-
-    \subsection{Context}\label{subsec:context}
-    \input{sections/introduction/context}
+    \input{sections/introduction/introduction}
 
     \subsection{Motivation}\label{subsec:motivation}
     \input{sections/introduction/motivation}
